Fix dashboard package status badges
Fixes #974.

- Standardize enum values to lowercase with whitespace between words
- Use the `enum` package enumeration values in Goa Enum() definitions
  to avoid maintaining duplicate lists
- Regenerate Goa and dashboard client assets to update enum values
- Use enum values in Dashboard tests
